complete section 'Adding Additional Elements to Index.html'

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>My First Clementine App</title>
+		<title>clementine.js - The elegant and lightweight full-stack boilerplate.</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
-		<p>Hail and well met, world!</p>
+
+		<div class="container">
+			<img src="/public/img/clementine_150.png" />
+			<br />
+			<p class="clementine-text">Clementine.js</p>
+		</div>
+
+		<div class="container">
+			<p>You have clicked the button <span id="click-nbr"></span> times.</p>
+			<br />
+			<div class="btn-container">
+				<button type="submit" class="btn btn-add">CLICK ME!</button>
+				<button class="btn btn-delete">RESET</button>
+			</div>
+		</div>
+
 	</body>
 </html>
